objects/Invitees__c.object
<CustomObject>
    <description>Junction Object Between User and AAT Request</description>
    <fields>
        <fullName>AAT_Request__c</fullName>
        <label>AAT Request</label>
        <referenceTo>AAT_Request__c</referenceTo>
        <relationshipLabel>Invitees</relationshipLabel>
        <relationshipName>Invitees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Invitee__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invitee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invitees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invitees</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invitees Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>